--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ plugins:
 include: ["_pages"]
 
 logo: "/assets/images/crested-wm-full-colour.png"
-title: BUI
+title: Brexit Uncertainty Index
 
 atom_feed:
   hide: true
